--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -53,7 +53,7 @@
         "id": "It3-4Qw_cBQ6"
       },
       "outputs": [],
-      "execution_count": null
+      "execution_count": 4
     },
     {
       "cell_type": "markdown",
@@ -119,24 +119,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VyldLoxcStk",
-        "outputId": "9419b3f5-f377-425d-dd05-28039417f699"
+        "outputId": "53cd1edd-ed74-41bd-c582-ce2890356a59"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-17 07:31:17--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.212.207, 172.217.204.207, 172.217.203.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.212.207|:443... connected.\n",
+            "--2025-09-18 08:00:56--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 192.178.212.207, 108.177.121.207, 209.85.145.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|192.178.212.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   152MB/s    in 1.1s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   172MB/s    in 0.9s    \n",
             "\n",
-            "2025-09-17 07:31:18 (152 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2025-09-18 08:00:57 (172 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "BB5IpZFIleoc"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -169,9 +169,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hccRg2Vledy",
-        "outputId": "32781754-4eb0-4f92-cf0c-9c86199f201e"
+        "outputId": "e91e70a2-a5a6-4507-92a3-76bd0e7c9429"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,27 +179,27 @@
           "text": [
             "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
             "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n"
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n"
           ]
         }
       ]
@@ -233,14 +233,16 @@
         "train_data_10_percent = train_datagen.flow_from_directory(train_dir,\n",
         "                                                          target_size=IMAGE_SHAPE,\n",
         "                                                          batch_size=BATCH_SIZE,\n",
-        "                                                          class_mode=\"categorical\")\n",
+        "                                                          class_mode=\"categorical\"\n",
+        "                                                          )\n",
         "\n",
         "\n",
         "print(\"Testing Images\")\n",
         "test_data = test_datagen.flow_from_directory(test_dir,\n",
         "                                             target_size=IMAGE_SHAPE,\n",
         "                                             batch_size=BATCH_SIZE,\n",
-        "                                             class_mode=\"categorical\")\n",
+        "                                             class_mode=\"categorical\"\n",
+        "                                             )\n",
         "\n"
       ],
       "metadata": {
@@ -248,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wHc9cw-8leaS",
-        "outputId": "437f92fb-1c40-4871-d0a3-138beb52bea2"
+        "outputId": "8216c259-84a1-4fae-a2dc-5bc31bab47ff"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,15 +293,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "waeWreQ2leXj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Creating a tensorboard callback\n",
         "\n",
@@ -313,7 +306,7 @@
       "metadata": {
         "id": "lt9_L9wHleQ7"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -402,7 +395,7 @@
       "metadata": {
         "id": "cfuo9Vl8leIA"
       },
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -421,7 +414,7 @@
       "metadata": {
         "id": "98_y2fW9ld_Z"
       },
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -436,75 +429,55 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def create_model(model_url, num_classes=10):\n",
-        "  \"\"\"\n",
-        "  Takes a TensorFlow Hub URL and creates a Keras Sequential model with it.\n",
-        "\n",
-        "  Args:\n",
-        "    model_url (str): A TensorFlow Hub feature extraction URL.\n",
-        "    num_classes (int): Number of output neurons in output layer,\n",
-        "                       should be equal to number of target classes, default 10.\n",
-        "\n",
-        "  Returns:\n",
-        "    An uncompiled Keras Sequential model with model_url as feature\n",
-        "    extractor layer and Dense output layer with num_classes outputs.\n",
-        "  \"\"\"\n",
-        "  # Download the pretrained model and save it as a Keras layer\n",
-        "  feature_extractor_layer = hub.KerasLayer(model_url,\n",
-        "                                           trainable=False, # freeze the underlying patterns\n",
-        "                                           name='feature_extraction_layer',\n",
-        "                                           input_shape=IMAGE_SHAPE+(3,)) # define the input image shape\n",
-        "\n",
-        "  # Create our own model\n",
-        "  model = tf.keras.Sequential([\n",
-        "    feature_extractor_layer, # use the feature extraction layer as the base\n",
-        "    layers.Dense(num_classes, activation='softmax', name='output_layer') # create our own output layer\n",
-        "  ])\n",
-        "\n",
-        "  return model"
+        "- We now have a function for creating **Model**.\n",
+        "- Our first model will be **ResNetV250** architecture as our feature extraction layer\n",
+        "- Once our model is instantiated, we will compile it using **categorical_crossentropy** as our loss function, **Adam Optimizer** and **Accuracy** as metric."
       ],
       "metadata": {
-        "id": "BSNGl7dooAYJ"
-      },
-      "execution_count": 3,
-      "outputs": []
+        "id": "FY2i_Kc31LC6"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "TZcQYQQ3oARZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "QelaCAIhoAOa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Zv-h7b1FoALa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "IMAGE_SHAPE = (224, 224)\n",
+        "\n",
+        "def create_model(model_url, num_classes=10):\n",
+        "    inputs = keras.Input(shape=IMAGE_SHAPE + (3,))\n",
+        "\n",
+        "    # Load hub model as a callable\n",
+        "    hub_model = hub.load(model_url)\n",
+        "\n",
+        "    # Wrap hub_model call in a Lambda layer\n",
+        "    x = layers.Lambda(lambda img: hub_model(img))(inputs)\n",
+        "\n",
+        "    # Output layer\n",
+        "    outputs = layers.Dense(num_classes, activation=\"softmax\")(x)\n",
+        "\n",
+        "    return keras.Model(inputs, outputs)\n",
+        "\n",
+        "# Example usage\n",
+        "resnet_url = \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/5\"\n",
+        "resnet_model = create_model(resnet_url,\n",
+        "                            num_classes=train_data_10_percent.num_classes)\n",
+        "\n",
+        "resnet_model.compile(\n",
+        "    loss=\"categorical_crossentropy\",\n",
+        "    optimizer=tf.keras.optimizers.Adam(),\n",
+        "    metrics=[\"accuracy\"]\n",
+        ")\n"
+      ],
       "metadata": {
         "id": "XOZekZ2woAIV"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
