--- a/Transfer_Learning_005.ipynb
+++ b/Transfer_Learning_005.ipynb
@@ -1,7 +1,6 @@
 {
   "metadata": {
     "kernelspec": {
-      "language": "python",
       "display_name": "Python 3",
       "name": "python3"
     },
@@ -27,8 +26,10 @@
       "isGpuEnabled": false
     },
     "colab": {
-      "provenance": []
-    }
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
   "nbformat_minor": 0,
   "nbformat": 4,
@@ -53,7 +54,7 @@
         "id": "It3-4Qw_cBQ6"
       },
       "outputs": [],
-      "execution_count": 4
+      "execution_count": 2
     },
     {
       "cell_type": "markdown",
@@ -119,24 +120,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VyldLoxcStk",
-        "outputId": "53cd1edd-ed74-41bd-c582-ce2890356a59"
+        "outputId": "4fff608a-f021-44ac-db69-fe970a672108"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-09-18 08:00:56--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 192.178.212.207, 108.177.121.207, 209.85.145.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|192.178.212.207|:443... connected.\n",
+            "--2025-09-19 07:00:24--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.24.207, 142.250.4.207, 172.217.194.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.24.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
-            "Saving to: ‘10_food_classes_10_percent.zip’\n",
+            "Saving to: ‘10_food_classes_10_percent.zip.1’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   172MB/s    in 0.9s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M  23.8MB/s    in 8.0s    \n",
             "\n",
-            "2025-09-18 08:00:57 (172 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2025-09-19 07:00:33 (20.2 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -153,7 +154,7 @@
       "metadata": {
         "id": "BB5IpZFIleoc"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -169,37 +170,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hccRg2Vledy",
-        "outputId": "e91e70a2-a5a6-4507-92a3-76bd0e7c9429"
+        "outputId": "fa8b35d7-7a02-4140-9b39-74b2ec8e28a2"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
-            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
-            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
             "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
             "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
-            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n"
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n"
           ]
         }
       ]
@@ -250,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wHc9cw-8leaS",
-        "outputId": "8216c259-84a1-4fae-a2dc-5bc31bab47ff"
+        "outputId": "28b9c690-2615-483b-cf67-4570403b088c"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +307,7 @@
       "metadata": {
         "id": "lt9_L9wHleQ7"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -395,7 +396,7 @@
       "metadata": {
         "id": "cfuo9Vl8leIA"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -414,7 +415,7 @@
       "metadata": {
         "id": "98_y2fW9ld_Z"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -431,7 +432,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- We now have a function for creating **Model**.\n",
+        "- The function below helps in creating **Model**.\n",
         "- Our first model will be **ResNetV250** architecture as our feature extraction layer\n",
         "- Once our model is instantiated, we will compile it using **categorical_crossentropy** as our loss function, **Adam Optimizer** and **Accuracy** as metric."
       ],
@@ -477,12 +478,36 @@
       "metadata": {
         "id": "XOZekZ2woAIV"
       },
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Adding the CallBack**\n",
+        "- A tensorflow **CallBack** adds extra functionality by virtue of which we can track the performance of our model on TensorBoard\n",
+        "- The **CallBack** is added in the **fit** method"
+      ],
+      "metadata": {
+        "id": "5xZTf5MbhZDb"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resnet_history = resnet_model.fit(\n",
+        "    train_data_10_percent,\n",
+        "    epochs=5,\n",
+        "    steps_per_epoch=len(train_data_10_percent),\n",
+        "    validation_data=test_data,\n",
+        "    validation_steps=len(test_data),\n",
+        "    callbacks=[create_tensorboard_callback(dir_name=\"tensorflow_hub\",\n",
+        "                                           experiment_name=\"resnet50V2\")]\n",
+        ")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "XSdlwwNMoAE1"
       },
@@ -494,6 +519,60 @@
       "source": [],
       "metadata": {
         "id": "Wignj0fUn_9M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "S54N-2bBiVaV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pnaTtRtyiWV6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "k6DfrKrMiWMi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LfveSi5kiWFa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fs9n3ckgiV84"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2KQAhVTLiVz8"
       },
       "execution_count": null,
       "outputs": []
